Adding homepage and page-not-found components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
     </div>
 </mat-toolbar>
 
-<div fxFill>
+<div fxFill fxLayout="column">
     <mat-sidenav-container class="main-content">
         <mat-sidenav #sidenav mode="side" opened="false" class="menu-sidenav" [fixedInViewport]="true" [position]="isMobile ? 'end' : 'start'">
             <ul fxLayout="column" fxLayoutAlign="start">
