Point the logo to the homepage route.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <mat-toolbar id="navigation" fxLayout="row" fxLayoutGap="2%" fxLayoutGap.lt-sm="10%" fxLayoutGap.lt-md="6%" [class.transparent]="false">
     <div class="logo-container" fxLayout="row" fxLayoutGap="10%">
         <div fxLayout="column" fxLayoutAlign="center center">
-            <div class="logo-text">Strongbox</div>
+            <div class="logo-text">
+                <a routerLink="/">Strongbox</a>
+            </div>
         </div>
         <div fxLayout="column" fxLayoutAlign="center center" fxHide.lt-lg>
             <div class="menu-button-wrapper" fxLayoutAlign="center">
