--- a/src/sass/layout/helpers.scss
+++ b/src/sass/layout/helpers.scss
@@ -6,6 +6,32 @@
     @if $margin != null {
       margin: $margin
     }
+
+    a {
+      color: rgba(255,255,255,0.85);
+      text-decoration: none;
+      transition: all 0.3ms ease-in-out;
+      position: relative;
+    }
+
+    a:hover {
+      color: white;
+    }
+
+    a::after {
+      content: '';
+      width: 0;
+      height: 1px;
+      background: #2684b4;
+      transition: width .2s;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+
+    a:hover::after {
+      width: 100%;
+    }
   }
 
   .logo-text:before,
