--- a/src/sass/layout/helpers.scss
+++ b/src/sass/layout/helpers.scss
@@ -1,5 +1,13 @@
 @mixin logo-text($font-size: 3.1rem, $margin: null) {
   .logo-text {
+    @media screen and(max-width: 450px) {
+      font-size: $font-size / 1.2;
+      @if $margin != null {
+        margin: $margin / 1.3;
+      }
+    }
+
+
     font-family: 'Raleway', sans-serif;
     font-size: $font-size;
     font-weight: 100;
@@ -8,7 +16,7 @@
     }
 
     a {
-      color: rgba(255,255,255,0.85);
+      color: rgba(255, 255, 255, 0.85);
       text-decoration: none;
       transition: all 0.3ms ease-in-out;
       position: relative;
@@ -36,6 +44,11 @@
 
   .logo-text:before,
   .logo-text:after {
+    @media screen and(max-width: 450px) {
+      font-size: $font-size / 1.15;
+      margin-top: -5px;
+    }
+
     font-family: 'Open Sans', sans-serif !important;
     font-weight: 100;
     font-size: $font-size + 0.4;
