--- a/src/sass/layout/navigation.scss
+++ b/src/sass/layout/navigation.scss
@@ -1,6 +1,6 @@
 #navigation {
   position: fixed;
-  z-index: 9999;
+  z-index: 999;
   background: $nav-background;
   transition: background-color 0.3s ease;
   -webkit-box-shadow: 0px -4px 11px 3px rgba(0, 0, 0, 0.65);
@@ -143,6 +143,10 @@
       }
 
       a {
+        @media screen and(max-width: 450px) {
+          font-size: 17px;
+        }
+
         padding: 7px 0.7rem 10px 0.7rem;
       }
 
