--- a/src/sass/layout/global.scss
+++ b/src/sass/layout/global.scss
@@ -53,3 +53,32 @@ a:hover::after {
 .text-right {
   text-align: right;
 }
+
+.page-container {
+  max-width: 88rem;
+  margin: auto;
+  padding-top: 20px;
+  padding-bottom: 140px;
+}
+
+::-webkit-scrollbar-button {
+  display: none;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  background-color: rgba(255, 255, 255, 0.50);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+
+::-webkit-scrollbar {
+  width: 8px;
+}
