Fix for overlapping form error messages.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import "sass/layout/navigation";
 @import "sass/layout/components/expansion-panel";
 @import "sass/layout/components/dialog";
+@import "sass/layout/components/form-errors";
 
 // This is necessary for the search results tabs.
 // TODO: Figure out a better way.
