--- a/src/sass/layout/global.scss
+++ b/src/sass/layout/global.scss
@@ -54,11 +54,23 @@ a:hover::after {
   text-align: right;
 }
 
-.page-container {
+.global-container {
   max-width: 88rem;
   margin: auto;
   padding-top: 20px;
   padding-bottom: 140px;
+
+  h3 {
+    font-weight: 400;
+    font-size: 1.2rem;
+    margin: 0px 0px 15px 0px;
+  }
+
+  > .page {
+    padding: 25px 24px 8px 24px;
+    background: #132530;
+  }
+
 }
 
 ::-webkit-scrollbar-button {
@@ -77,7 +89,6 @@ a:hover::after {
 ::-webkit-scrollbar-track {
   background-color: rgba(255, 255, 255, 0.2);
 }
-
 
 ::-webkit-scrollbar {
   width: 8px;
