--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,11 @@
     <!-- This fills the remaining space of the current row -->
     <div fxFlex="1 1 auto" class="search-container">
         <div class="search" fxHide.lt-sm fxLayout="column">
-            <input type="text" placeholder="Search query" [ngModel]="searchQuery | async" (ngModelChange)="this.searchQuery.next($event)" (keyup.enter)="submitSearchRequest()"/>
+            <input type="text"
+                   placeholder="Search query"
+                   [ngModel]="searchQuery | async"
+                   (ngModelChange)="this.searchQuery.next($event)"
+                   (keyup.enter)="submitSearchRequest()"/>
             <i class="icon ion-md-search"></i>
         </div>
     </div>
@@ -45,13 +49,17 @@
             </li>
             <li *ngIf="(isAuthenticated$ | async)">
                 <a title="Notifications">
-                    <span matBadge="14" matBadgeOverlap="false" matBadgeSize="small" matBadgePosition="after above" matBadgeColor="warn" class="alert">
+                    <span matBadge="14" matBadgeOverlap="false" matBadgeSize="small" matBadgePosition="after above"
+                          matBadgeColor="warn" class="alert">
                         <i class="icon ion-md-notifications"></i>
                     </span>
                 </a>
             </li>
             <li *ngIf="(isAuthenticated$ | async)" fxHide.lt-xs>
-                <a title="Profile" [routerLink]="['profile']">
+                <a title="Profile"
+                   routerLink="profile"
+                   routerLinkActive="active"
+                   [routerLinkActiveOptions]="{exact: true}">
                     <i class="icon ion-md-person"></i> <span fxHide.lt-lg>&nbsp;&nbsp;{{ (session$ | async).user.username }}</span>
                 </a>
             </li>
@@ -64,7 +72,8 @@
                 <div class="menu-button-wrapper" fxLayoutAlign="center">
                     <div fxLayoutAlign="center center">
                         <div class="menu-container">
-                            <a id="toggleMobileSideNav" (click)="toggleSideNav()" [class.close]="(sideNavOpened$ | async)">
+                            <a id="toggleMobileSideNav" (click)="toggleSideNav()"
+                               [class.close]="(sideNavOpened$ | async)">
                                 <div class="line top"></div>
                                 <div class="line middle"></div>
                                 <div class="line bottom"></div>
@@ -81,14 +90,13 @@
     <mat-sidenav-container class="main-content" (backdropClick)="closeSideNavBackdropClick()">
         <mat-drawer-container [hasBackdrop]="false" [autosize]="true"></mat-drawer-container>
 
-        <mat-sidenav
-                    #sideNavElement
-                    class="menu-sidenav"
-                    [hidden]="(session$ | async).state == 'authenticated'"
-                    [opened]="(sideNavOpened$ | async)"
-                    [fixedInViewport]="true"
-                    [position]="(sideNav$ | async).position"
-                    [mode]="(sideNav$ | async).mode">
+        <mat-sidenav #sideNavElement
+                     class="menu-sidenav"
+                     [hidden]="(session$ | async).state == 'authenticated'"
+                     [opened]="(sideNavOpened$ | async)"
+                     [fixedInViewport]="true"
+                     [position]="(sideNav$ | async).position"
+                     [mode]="(sideNav$ | async).mode">
             <ul fxLayout="column" fxLayoutAlign="start" *ngIf="(session$ | async).state == 'authenticated'">
                 <li>
                     <a>Dashboard</a>
@@ -97,7 +105,11 @@
                     <a>Browse</a>
                 </li>
                 <li>
-                    <a [routerLink]="['profile']">Profile</a>
+                    <a routerLink="profile"
+                       routerLinkActive="active"
+                       [routerLinkActiveOptions]="{exact: true}">
+                        Profile
+                    </a>
                 </li>
                 <li *ngIf="(session$ | async).user.hasAuthority('ADMIN')">
                     <a href="#">Administration</a>
@@ -112,7 +124,13 @@
                         <li><a>Security</a></li>
                         <li><a>Server</a></li>
                         <li><a>Storages</a></li>
-                        <li><a routerLink="admin/users">Users</a></li>
+                        <li>
+                            <a routerLink="admin/users"
+                               routerLinkActive="active"
+                               [routerLinkActiveOptions]="{exact: true}">
+                                Users
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
