--- a/src/sass/layout/global.scss
+++ b/src/sass/layout/global.scss
@@ -29,11 +29,11 @@ a {
   display: inline-block;
 }
 
-a:hover {
+a.active, a:hover {
   color: $nav-link-hover;
 }
 
-a::after {
+a.active::after, a::after {
   content: '';
   display: block;
   width: 0;
@@ -42,7 +42,7 @@ a::after {
   transition: width .2s;
 }
 
-a:hover::after {
+a.active::after, a:hover::after {
   width: 100%;
 }
 
@@ -63,7 +63,7 @@ a:hover::after {
 .global-container {
   /*max-width: 88rem;*/
   margin: auto;
-  padding-top: 15px;
+  padding-top: 20px;
   padding-bottom: 140px;
   transition: max-width 0.3s;
 
@@ -76,7 +76,7 @@ a:hover::after {
   h3 {
     font-weight: 400;
     font-size: 1.2rem;
-    margin: 0px 0px 15px 0px;
+    margin: 0px 0px 30px 0px;
   }
 
   > .page {
